--- a/SkiaSharpTextures/SkiaSharpTextures.csproj
+++ b/SkiaSharpTextures/SkiaSharpTextures.csproj
@@ -71,8 +71,10 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="OpenTK" Version="1.1.2349.61993" />
     <PackageReference Include="SkiaSharp" Version="1.59.3" />
+    <PackageReference Include="OpenTK">
+      <Version>2.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
